Prevent term editor line from wrapping

--- a/stroom-app/src/main/resources/ui/css/TermEditor.css
+++ b/stroom-app/src/main/resources/ui/css/TermEditor.css
@@ -18,6 +18,7 @@
 	margin: 1px;
 	margin-top: 0px;
 	white-space: nowrap;
+	display: flex;
 }
 
 .termEditor-item {
